# stockTracker26

./: .env.example  .gitignore  CLAUDE.md  README.md  STOCK-RADAR-SPEC.md  pyproject.toml
config/: contagion_pairs.yaml  default.yaml  watchlist.yaml
dashboard/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
dashboard/public/: manifest.json
dashboard/src/: main.ts
dashboard/src/api/: client.ts  types.ts
dashboard/src/components/: sr-agent-status.ts  sr-app.ts  sr-signal-card.ts  sr-signals-view.ts  sr-ticker-detail.ts  sr-watchlist-view.ts
dashboard/src/styles/: _mixins.scss  _reset.scss  _variables.scss  main.scss
openclaw/: cron-jobs.json  openclaw.json
openclaw/skills/stock-radar/: SKILL.md
src/stock_radar/: __init__.py
src/stock_radar/agents/: base.py  exceptions.py  models.py
src/stock_radar/config/: __init__.py  loader.py  settings.py
src/stock_radar/llm/: __init__.py  anthropic_client.py  base.py  factory.py  (+4 more)
tests/: conftest.py
tests/agents/: conftest.py  helpers.py  test_base.py  test_models.py
tests/config/: test_loader.py  test_settings.py
tests/llm/: test_anthropic_client.py  test_base.py  test_factory.py  test_models.py  test_ollama_client.py  test_openai_client.py
tests/mcp_servers/: conftest.py
tests/orchestrator/: test_cycle.py  test_models.py  test_phases.py
tests/pipeline/: test_fetchers.py  test_models.py  test_quarter.py  test_runner.py  test_watchlist.py
tests/scoring/: test_date_utils.py  test_models.py  test_runner.py
tests/utils/: test_cache.py  test_rate_limiter.py
(+120 files in other folders)
