[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-radar"
version = "0.1.0"
description = "AI-powered stock market analysis using LLMs"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "anthropic>=0.40.0",
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "ruff>=0.6.0",
]

[project.scripts]
stock-radar-earnings-linguist = "stock_radar.agents.earnings_linguist.runner:main"
stock-radar-ingest = "stock_radar.pipeline.runner:main"
stock-radar-score = "stock_radar.scoring.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["stock_radar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
